--- a/styleM.css
+++ b/styleM.css
@@ -10,7 +10,7 @@
     background-color: #114b8033;
     overflow: hidden;
     width: 1045px;
-    height: 2302px;
+    height: 2700px;
     position: relative;
   }
   
@@ -24,7 +24,7 @@
   
   .index .element {
     position: absolute;
-    width: 2533px;
+    width: 533px;
     height: 996px;
     top: 216px;
     left: 0;
@@ -116,6 +116,26 @@
     overflow: hidden;
     box-shadow: 11px 11px 9px #00000040;
   }
+
+  .index .expediente-botao {
+    display: flex;
+    flex-direction: column;
+    width: 837px;
+    height: 225px;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 12px;
+    position: absolute;
+    top: 1100px; /* Ajuste este valor para mover o botão mais abaixo */
+    left: 430px;
+    background-color: #00568c;
+    border-radius: 17px;
+    overflow: hidden;
+    box-shadow: 11px 11px 9px #00000040;
+}
+
+
   
   .index .overlap {
     position: absolute;
